hphp/test/quick/method_param_promotion_error.php.expectf

Fatal error: Parameters cannot have visibility modifiers (except in parameter lists of constructors). in %s/method_param_promotion_error.php on line 7
